# simplest_ffmpeg_audio_player

./: CMakeLists.txt  README.md  main.cpp
